# trump-corpus

./: .gitignore  .nojekyll  ACTION-ITEMS.md  CLAUDE.md  README.md  SESSION_CLOSEOUT.md  about.html  analytics.html  index.html  map.html  pyproject.toml  robots.txt  search.json  sitemap.xml  themes.html  timeline.html
assets/: audio.js
data/: audio_manifest.json  heroes.json  images.json  lexical.json  locations.json  nicknames.json  sentiment.json  sources.md  storm_days.json  temporal.json  tfidf.json  topic_stream.json
scripts/: audio_speaker_filter.py  build_corpus.py  build_lexical.py  build_nickname_viz.py  build_sentiment.py  build_site.py  build_temporal.py  build_tfidf.py  build_topic_stream.py  build_topics.py  build_voice_dataset.py  export_parquet.py  fetch_hero_imagery.py  fetch_imagery.py  fetch_rallies.py  generate_summary.py  refresh.py  render_voice.py  smoke_test_finetune.py  train_xtts.py
site/: _quarto.yml  _themes_grid.qmd  _timeline_ribbon.qmd  _timeline_volume.qmd  about.qmd  analytics.qmd  index.qmd  map.qmd  styles.scss  themes.qmd  timeline.qmd
tasks/: lessons.md
themes/: border.html  china.html  courts.html  covid.html  crime.html  economy.html  elections.html  energy.html  foreign_policy.html  jobs.html  lifestyle.html  media.html  military.html  nicknames_bad.html  nicknames_good.html  personal_family.html  rallies.html  trade.html
timeline/: 2009.html  2010.html  2011.html  2012.html  2013.html  2014.html  2015.html  2016.html  2017.html  2018.html  2019.html  2020.html  2021.html  2022.html  2023.html  2024.html  2025.html  (+1 more)
(+58 files in other folders)
